src/test/ui/nll/maybe-initialized-drop-with-fragment.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/maybe-initialized-drop-with-fragment.rs:31:5
   |
27 |     let wrap = Wrap { p: &mut x };
   |                          ------ borrow of `x` occurs here
...
31 |     x = 1; //~ ERROR cannot assign to `x` because it is borrowed [E0506]
   |     ^^^^^ assignment to borrowed `x` occurs here
32 | }
   |  - borrow later used here, when `foo` is dropped

error: aborting due to previous error

